some rules updated
gmail , skype moved to direct
t.me added to proxy rules
duplicated keyword removed

--- a/shadowIR.conf
+++ b/shadowIR.conf
@@ -251,7 +251,6 @@ DOMAIN-SUFFIX,g.co,PROXY
 DOMAIN-SUFFIX,get.how,PROXY
 DOMAIN-SUFFIX,getmdl.io,PROXY
 DOMAIN-SUFFIX,ggpht.com,PROXY
-DOMAIN-SUFFIX,gmail.com,PROXY
 DOMAIN-SUFFIX,gmodules.com,PROXY
 DOMAIN-SUFFIX,goo.gl,PROXY
 DOMAIN-SUFFIX,gstatic.com,PROXY
@@ -376,7 +375,6 @@ DOMAIN-SUFFIX,sockslist.net,PROXY
 DOMAIN-SUFFIX,snapchat.com,PROXY
 DOMAIN-SUFFIX,smh.com.au,PROXY
 DOMAIN-SUFFIX,slideshare.net,PROXY
-DOMAIN-SUFFIX,skype.com,PROXY
 DOMAIN-SUFFIX,sketchappsources.com,PROXY
 DOMAIN-SUFFIX,sidelinesnews.com,PROXY
 DOMAIN-SUFFIX,shadowsocks.org,PROXY
@@ -390,6 +388,7 @@ DOMAIN-SUFFIX,twimg.com,PROXY
 DOMAIN-SUFFIX,twitthat.com,PROXY
 DOMAIN-SUFFIX,twttr.com,PROXY
 DOMAIN-SUFFIX,t.co,PROXY
+DOMAIN-SUFFIX,t.me,PROXY
 DOMAIN-SUFFIX,tv.com,PROXY
 DOMAIN-SUFFIX,tumblr.com,PROXY
 DOMAIN-SUFFIX,turbobit.net,PROXY
@@ -492,15 +491,12 @@ DOMAIN-SUFFIX,4shared.com,PROXY
 DOMAIN-SUFFIX,blogspot.com,PROXY
 DOMAIN-SUFFIX,appsto.re,PROXY
 DOMAIN-SUFFIX,bit.ly,PROXY
-DOMAIN-KEYWORD,youtube,PROXY
-DOMAIN-KEYWORD,facebook,PROXY
-DOMAIN-KEYWORD,twitter,PROXY
-DOMAIN-KEYWORD,yahoo,PROXY
-DOMAIN-KEYWORD,telegram,PROXY
 # End Proxy Rules
 
 # Begin Direct Rules
 DOMAIN-SUFFIX,w3schools.com,DIRECT
+DOMAIN-SUFFIX,gmail.com,DIRECT
+DOMAIN-SUFFIX,skype.com,DIRECT
 # End Direct Rules
 
 # Begin Proxy Rules by keyword
