whoer.net add to proxy rules

--- a/shadowIR.conf
+++ b/shadowIR.conf
@@ -327,6 +327,7 @@ DOMAIN-SUFFIX,gfw.press,PROXY
 DOMAIN-SUFFIX,howtoforge.com,PROXY
 DOMAIN-SUFFIX,hootsuite.com,PROXY
 DOMAIN-SUFFIX,homedepot.com,PROXY
+DOMAIN-SUFFIX,whoer.net,PROXY
 DOMAIN-SUFFIX,icoco.com,PROXY
 DOMAIN-SUFFIX,imgur.com,PROXY
 DOMAIN-SUFFIX,instructables.com,PROXY
