--- a/shadowIR.conf
+++ b/shadowIR.conf
@@ -1,3 +1,7 @@
+# Author : @Ja7ad
+# Version : 0.0.1
+
+
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com
