adguard rules author added

--- a/shadowIR.conf
+++ b/shadowIR.conf
@@ -4691,7 +4691,7 @@ IP-CIDR,2001:67c:4e8::/48,PROXY,no-resolve
 # End Telegram Proxy
 
 # Begin block ads
-# AdGuard DNS filter (Optimized) - Updated -> 2021-03-21T15:30:47+03:00
+# AdGuard DNS filter (By Fardin) - Updated -> 2021-03-21T15:30:47+03:00
 DOMAIN-SUFFIX,pateablyace.com,REJECT
 DOMAIN-SUFFIX,harmlesstacticalhonorable.com,REJECT
 DOMAIN-SUFFIX,air2s.com,REJECT
