paypal,blockchain,google services add

--- a/shadowIR.conf
+++ b/shadowIR.conf
@@ -20,6 +20,8 @@ ipv6 = true
 
 [Rule]
 # Begin Proxy Rules
+DOMAIN-SUFFIX,paypal.com,Proxy
+DOMAIN-SUFFIX,*.google.com,Proxy
 DOMAIN-SUFFIX,4tern.com,Proxy
 DOMAIN-SUFFIX,85.17.73.31,Proxy
 DOMAIN-SUFFIX,adorama.com,Proxy
@@ -382,7 +384,6 @@ DOMAIN-SUFFIX,chromeexperiments.com,Proxy
 DOMAIN-SUFFIX,chromercise.com,Proxy
 DOMAIN-SUFFIX,chromestatus.com,Proxy
 DOMAIN-SUFFIX,chromium.org,Proxy
-DOMAIN-SUFFIX,com.google,Proxy
 DOMAIN-SUFFIX,data-vocabulary.org,Proxy
 DOMAIN-SUFFIX,deepmind.com,Proxy
 DOMAIN-SUFFIX,deja.com,Proxy
@@ -413,7 +414,6 @@ DOMAIN-SUFFIX,google.co.jp,Proxy
 DOMAIN-SUFFIX,google.co.kr,Proxy
 DOMAIN-SUFFIX,google.co.ma,Proxy
 DOMAIN-SUFFIX,google.co.uk,Proxy
-DOMAIN-SUFFIX,google.com,Proxy
 DOMAIN-SUFFIX,google.de,Proxy
 DOMAIN-SUFFIX,google.dj,Proxy
 DOMAIN-SUFFIX,google.dk,Proxy
@@ -4670,6 +4670,7 @@ DOMAIN-KEYWORD,youtube,Proxy
 DOMAIN-KEYWORD,facebook,Proxy
 DOMAIN-KEYWORD,twitter,Proxy
 DOMAIN-KEYWORD,telegram,Proxy
+DOMAIN-KEYWORD,blockchain,Proxy
 # End Proxy Rules by keyword
 
 
