google subdomain set as url regex rules

--- a/shadowIR.conf
+++ b/shadowIR.conf
@@ -20,8 +20,9 @@ ipv6 = true
 
 [Rule]
 # Begin Proxy Rules
+URL-REGEX,[0-9a-z]*\.google\.com,Proxy
+URL-REGEX,[0-9a-z]*\.[0-9a-z]*\.google\.com,Proxy
 DOMAIN-SUFFIX,paypal.com,Proxy
-DOMAIN-SUFFIX,*.google.com,Proxy
 DOMAIN-SUFFIX,4tern.com,Proxy
 DOMAIN-SUFFIX,85.17.73.31,Proxy
 DOMAIN-SUFFIX,adorama.com,Proxy
