--- a/shadowIR.conf
+++ b/shadowIR.conf
@@ -11,7 +11,7 @@ always-real-ip = *.apple.com
 
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32
 
-# Adguard and Google dns
+# CloudFlare and Google dns
 dns-server = 1.1.1.1,8.8.8.8
 
 ipv6 = true
