Iran Ads site rejected to access

--- a/shadowIR.conf
+++ b/shadowIR.conf
@@ -1,5 +1,5 @@
 # Author : Javad Rajabzade < @Ja7ad >
-# Version : 0.0.4
+# Version : 0.0.5
 
 
 [General]
@@ -4693,6 +4693,51 @@ IP-CIDR,2001:67c:4e8::/48,PROXY,no-resolve
 # End Telegram Proxy
 
 # Begin block ads
+# Iran Ads Filter
+DOMAIN-SUFFIX,yektanet.com,REJECT
+DOMAIN-SUFFIX,kaprila.com,REJECT
+DOMAIN-SUFFIX,notificationclick.ir,REJECT
+DOMAIN-SUFFIX,radar.bayan.ir,REJECT
+DOMAIN-SUFFIX,s.hitplus.ir,REJECT
+DOMAIN-SUFFIX,ssl.vatanclick.ir,REJECT
+DOMAIN-SUFFIX,t3l.ir,REJECT
+DOMAIN-SUFFIX,tapsell.ir,REJECT
+DOMAIN-SUFFIX,vista.ir,REJECT
+DOMAIN-SUFFIX,weclick.ir,REJECT
+DOMAIN-SUFFIX,1000click.ir,REJECT
+DOMAIN-SUFFIX,ad.utop.ir,REJECT
+DOMAIN-SUFFIX,ads.4ml.ir,REJECT
+DOMAIN-SUFFIX,ads.aranesh.ir,REJECT
+DOMAIN-SUFFIX,ads.baadesaba.ir,REJECT
+DOMAIN-SUFFIX,ads.lll5.ir,REJECT
+DOMAIN-SUFFIX,ads.rade.ir,REJECT
+DOMAIN-SUFFIX,ads.sahandar.com,REJECT
+DOMAIN-SUFFIX,ads2.tweetna.ir,REJECT
+DOMAIN-SUFFIX,adtube.ir,REJECT
+DOMAIN-SUFFIX,androidads.ir,REJECT
+DOMAIN-SUFFIX,anetwork.ir,REJECT
+DOMAIN-SUFFIX,balootads.ir,REJECT
+DOMAIN-SUFFIX,bannerclick.lll1.ir,REJECT
+DOMAIN-SUFFIX,clickbux.ir,REJECT
+DOMAIN-SUFFIX,dserver.adad.ir,REJECT
+DOMAIN-SUFFIX,e.weclick.ir,REJECT
+DOMAIN-SUFFIX,p30rank.ir,REJECT
+DOMAIN-SUFFIX,popbox.skinak.ir,REJECT
+DOMAIN-SUFFIX,popfa.ir,REJECT
+DOMAIN-SUFFIX,popupplus.ir,REJECT
+DOMAIN-SUFFIX,r.hitplus.ir,REJECT
+DOMAIN-SUFFIX,ads.sahandar.com,REJECT
+DOMAIN-SUFFIX,clickyab.com,REJECT
+DOMAIN-SUFFIX,click.baburnadir.com,REJECT
+DOMAIN-SUFFIX,js.foxpush.com,REJECT
+DOMAIN-SUFFIX,kimexa.com,REJECT
+DOMAIN-SUFFIX,magnetadservices.com,REJECT
+DOMAIN-SUFFIX,netbina.com,REJECT
+DOMAIN-SUFFIX,poparya.com,REJECT
+DOMAIN-SUFFIX,popupha.com,REJECT
+DOMAIN-SUFFIX,sabavision.com,REJECT
+DOMAIN-SUFFIX,sigmaad.com,REJECT
+DOMAIN-SUFFIX,zarpop.com,REJECT
 # AdGuard DNS filter (By Fardin) - Updated -> 2021-03-21T15:30:47+03:00
 DOMAIN-SUFFIX,pateablyace.com,REJECT
 DOMAIN-SUFFIX,harmlesstacticalhonorable.com,REJECT
