--- a/shadowIR.conf
+++ b/shadowIR.conf
@@ -1,5 +1,5 @@
 # Author : Javad Rajabzade < @Ja7ad >
-# Version : 0.0.5
+# Version : 0.0.6
 
 
 [General]
@@ -4661,6 +4661,7 @@ DOMAIN-SUFFIX,bit.ly,PROXY
 # End Proxy Rules
 
 # Begin Direct Rules
+DOMAIN-SUFFIX,dl2.apptrackr.ir,DIRECT
 DOMAIN-SUFFIX,w3schools.com,DIRECT
 DOMAIN-SUFFIX,gmail.com,DIRECT
 DOMAIN-SUFFIX,skype.com,DIRECT
