--- a/shadowIR.conf
+++ b/shadowIR.conf
@@ -1,5 +1,5 @@
 # Author : Javad Rajabzade < @Ja7ad >
-# Version : 0.1.0
+# Version : 0.1.1
 
 
 [General]
@@ -31,7 +31,9 @@ RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/
 RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/apple.plist,REJECT
 RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/youtube.plist,REJECT
 RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/spotify.plist,REJECT
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/social.plist,REJECT
 RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/other.plist,REJECT
+
 
 GEOIP,IR,DIRECT
 FINAL,PROXY
