--- a/shadowIR.conf
+++ b/shadowIR.conf
@@ -32,6 +32,7 @@ RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/
 RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/youtube.plist,REJECT
 RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/spotify.plist,REJECT
 RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/social.plist,REJECT
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/error-monitor.plist,REJECT
 RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/other.plist,REJECT
 
 
