app.najva added

--- a/rules/reject/iran.plist
+++ b/rules/reject/iran.plist
@@ -43,7 +43,7 @@ DOMAIN-SUFFIX,sabavision.com
 DOMAIN-SUFFIX,sigmaad.com
 DOMAIN-SUFFIX,zarpop.com
 DOMAIN-SUFFIX,cloudirs.cf
-DOMAIN-SUFFIX,cdn.hostdl.com/img/soft98.gif
+DOMAIN-SUFFIX,app.najva.com
 DOMAIN-SUFFIX,beta.kaprila.com
 DOMAIN-KEYWORD,kaprila
 DOMAIN-SUFFIX,cdn.yektanet.com
