--- a/shadowIR.conf
+++ b/shadowIR.conf
@@ -1,5 +1,5 @@
 # Author : Javad Rajabzade < @Ja7ad >
-# Version : 0.1.1
+# Version : 0.1.2
 
 
 [General]
@@ -42,6 +42,274 @@ FINAL,PROXY
 127.0.0.1=localhost
 
 [URL Rewrite]
+addnow.com^$third-party - reject
+addthis.com^$third-party - reject
+addthiscdn.com^$domain=~addthis.com - reject
+addtoany.com^$third-party - reject
+ahalogy.com^$third-party - reject
+aim-ads.com/multimedia-themonitor-com/wwwroot/*_twitter_ - reject
+amazonaws.com/share.typeform.com/ - reject
+angel.co/embed/button.html$third-party - reject
+api-read.facebook.com/restserver.php?api_key=$third-party - reject
+api.groupon.com^$third-party - reject
+api.starsmp.com^$third-party - reject
+api.twitter.com^*/count.json?$third-party - reject
+api.twitter.com^*/lookup.json?$third-party - reject
+api.twitter.com^*/show.json?$third-party,domain=~twimg.com - reject
+api.twitter.com^*/user_timeline$third-party - reject
+apis.google.com/*/socialgraph/$third-party - reject
+apis.google.com/_/apps-static/_/js/gapi/*plusone/$third-party - reject
+apis.google.com/_/scs/apps-static/*=page,plusone/$third-party - reject
+apis.google.com/js/platform.js$third-party - reject
+apis.google.com^*/widget/render/badge?$third-party - reject
+apis.google.com^*/widget/render/community?$third-party - reject
+apis.google.com^*/widget/render/follow?$third-party - reject
+apis.google.com^*/widget/render/page?$third-party - reject
+apis.google.com^*/widget/render/person?$third-party - reject
+assets.pinterest.com/js/pinit.js$third-party - reject
+assets.pinterest.com/pidget.html$third-party - reject
+assets.tumblr.com/assets/html/iframe/o.html$third-party - reject
+assets.tumblr.com/assets/html/iframe/teaser.html?$third-party - reject
+b.hatena.ne.jp^$third-party - reject
+b.st-hatena.com/images/$image,third-party - reject
+b.st-hatena.com/js/$script,third-party - reject
+badge.facebook.com^$third-party - reject
+badges.instagram.com^$third-party - reject
+bit.ly/TweetAndTrack.js - reject
+bizsugar.com^*/button-b.php$third-party - reject
+bloglovin.com/widget/$third-party - reject
+bshare.cn^$third-party - reject
+bufferapp.com^$third-party - reject
+button.like.co^$third-party - reject
+buttons.github.io/buttons.js$third-party - reject
+buttons.googlesyndication.com^$third-party,domain=~google.com - reject
+buttons.reddit.com^$third-party - reject
+buzzbuttons.com^$third-party - reject
+cdn.wibiya.com^$script - reject
+cloudfront.net/*/facebook.png - reject
+cloudfront.net/*/twitter.png - reject
+connect.ok.ru^$third-party - reject
+conversionsbox.com^$third-party - reject
+crowdynews.com^$third-party - reject
+d5k6iufjynyu8.cloudfront.net^ - reject
+dailymotion.com/badge/user/$third-party - reject
+digg.com^$script,subdocument,third-party - reject
+diggstatic.com^*/follow_buttons/ - reject
+encrypted-tbn2.gstatic.com/images?$domain=vitorrent.org - reject
+facebook.com*/plugins/like.php?$third-party - reject
+facebook.com/connect/connect.*connections$third-party,domain=~farmville.com - reject
+facebook.com/connect/connect.php?*width*&height$third-party - reject
+facebook.com/dialog/oauth?display=popup$popup,domain=humorhub.org - reject
+facebook.com/plugins/activity.php?$third-party - reject
+facebook.com/plugins/facepile.php?$third-party - reject
+facebook.com/plugins/fan.php?$third-party - reject
+facebook.com/plugins/follow.php$third-party - reject
+facebook.com/plugins/follow?$third-party - reject
+facebook.com/plugins/like_box.php$third-party - reject
+facebook.com/plugins/likebox/$third-party - reject
+facebook.com/plugins/page.php?$third-party - reject
+facebook.com/plugins/recommendations.php?$third-party - reject
+facebook.com/plugins/recommendations_bar.php?$third-party - reject
+facebook.com/plugins/save.php?$third-party - reject
+facebook.com/plugins/send.php?$third-party - reject
+facebook.com/plugins/subscribe.php$third-party - reject
+facebook.com/plugins/subscribe?$third-party - reject
+facebook.com/restserver.php?*.getStats&$third-party - reject
+facebook.com/whitepages/wpminiprofile.php$third-party - reject
+facebook.com/widgets/activity.php?$third-party - reject
+facebook.com/widgets/fan.php?$third-party - reject
+facebook.com/widgets/like.php?$third-party - reject
+facebook.com/widgets/recommendations.php?$third-party - reject
+facebook.com^*/plugins/activity.php?$third-party - reject
+facebook.com^*/plugins/facepile.php?$third-party - reject
+facebook.com^*/plugins/fan.php?$third-party - reject
+facebook.com^*/plugins/follow.php?$third-party - reject
+facebook.com^*/plugins/follow?$third-party - reject
+facebook.com^*/plugins/like_box.php?$third-party - reject
+facebook.com^*/plugins/likebox/$third-party - reject
+facebook.com^*/plugins/page.php?$third-party - reject
+facebook.com^*/plugins/recommendations.php?$third-party - reject
+facebook.com^*/plugins/recommendations_bar.php?$third-party - reject
+facebook.com^*/plugins/save.php?$third-party - reject
+facebook.com^*/plugins/send.php?$third-party - reject
+facebook.com^*/plugins/subscribe.php$third-party - reject
+facebook.com^*/plugins/subscribe?$third-party - reject
+facebook.com^*/quote.php?$third-party - reject
+fark.com^$script,third-party - reject
+feedly.com/img/follows/$third-party - reject
+figshare.com^$third-party - reject
+filamentapp-assets.s3.amazonaws.com^$third-party - reject
+filamentapp.s3.amazonaws.com^$third-party - reject
+flickr.com/badge_code_$third-party - reject
+flipboard.com/web/buttons/$third-party - reject
+followistic.com^$third-party - reject
+friends2follow.com^$subdocument,third-party - reject
+getpocket.com/button?$third-party - reject
+getsocial.io/widget/$third-party - reject
+getsocial.io^*/gs_async.js$third-party - reject
+google.com/_/+1/$third-party - reject
+google.com^*/fastbutton?$third-party - reject
+gotchosen.com^$third-party - reject
+gplusapi.appspot.com^$third-party - reject
+graph.facebook.com/fql?q=SELECT$third-party - reject
+handll.com^$third-party - reject
+hatena.ne.jp/entry/button/$third-party - reject
+herokuapp.com/button.html?$third-party - reject
+hn-button.herokuapp.com^$third-party - reject
+houzz.com/buttonWidget?$third-party - reject
+iconosquare.com/widget.php$third-party - reject
+insidesoci.al^$third-party - reject
+instagram.com^*/users/$third-party - reject
+instagramfollowbutton.com^$third-party - reject
+instawidget.net^$third-party - reject
+intagme.com/in/?u=$third-party - reject
+jiathis.com^$third-party - reject
+jit.su/frame$third-party - reject
+karmacracy.com/widget$third-party - reject
+lessbuttons.com^$third-party - reject
+likebtn.com^$third-party - reject
+line-apps.com^*/thirdparty/$third-party - reject
+line.me/js/line-button.js?$third-party - reject
+linkedin.com/countserv/$third-party - reject
+linkedin.com/img/$third-party - reject
+linkedin.com/uas/js/userspace?$third-party - reject
+linksalpha.com^$third-party - reject
+loveclaw.com^$third-party - reject
+managewp.org^$third-party - reject
+markerly.com^$third-party - reject
+massrelevance.com^$third-party - reject
+meebo.com^$third-party - reject
+meerkatapp.co/btn/$third-party - reject
+messengerpeople.com^$third-party - reject
+milotree.com^$third-party - reject
+networkedblogs.com^$third-party - reject
+newsharecounts.com^$third-party - reject
+opensharecount.com^$third-party - reject
+pepper.com^$third-party - reject
+pinterest.com/images/$third-party - reject
+pinterest.com/js/pinit_main.js$third-party - reject
+pinterest.com/v1/urls/count.json$third-party - reject
+platform.foursquare.com^$third-party - reject
+platform.linkedin.com^$third-party - reject
+platform.stumbleupon.com/*/widgets.js$third-party - reject
+platform.tumblr.com^$third-party - reject
+platform.twitter.com*/widget/$third-party - reject
+platform.twitter.com*/widgets/$third-party - reject
+platform.twitter.com/anywhere.js$third-party - reject
+platform.twitter.com/embed/$~stylesheet,~subdocument,third-party - reject
+platform.twitter.com/js/button.$third-party - reject
+plista.com/like.php$third-party - reject
+plus.google.com^*/js/widget/$third-party - reject
+plusone.google.com^$third-party - reject
+po.st/share/$script - reject
+po.st/static/$third-party - reject
+reactandshare.com^$third-party - reject
+readrboard.com^$third-party - reject
+reddit.com/api/info.json?$third-party - reject
+reddit.com/button.js?$third-party - reject
+reddit.com/buttonlite.js$third-party - reject
+reddit.com/buttonlite?$third-party - reject
+reddit.com/domain/$third-party - reject
+reddit.com/static/$third-party - reject
+reddit.com^*/submitted.embed?$third-party - reject
+redditstatic.com/button/$third-party,domain=~reddit.com - reject
+redditstatic.s3.amazonaws.com^$third-party,domain=~reddit.com - reject
+revinate.com^$third-party - reject
+rp-api.com/rjs/repostus.js - reject
+scoop.it^$third-party - reject
+search.twitter.com^$third-party - reject
+share.itraffic.su^$third-party - reject
+share.pluso.ru^$third-party - reject
+share.static.skyrock.net^$third-party - reject
+share.yandex.ru^$third-party - reject
+shareaholic.com^$third-party - reject
+sharedcount.com^$third-party - reject
+sharethis.com^$third-party - reject
+sharexy.com^$third-party - reject
+shpg.org^$third-party - reject
+simplesharebuttons.com^$third-party - reject
+smartaddon.com/share_addon.js - reject
+social9.com^$third-party - reject
+socialannex.com^$third-party - reject
+socialhoney.co/widget/ - reject
+socialmarker.com^$third-party - reject
+socialmediabuttons.com^$third-party - reject
+socialmediatabs.com^$third-party - reject
+socialproof.it^$third-party - reject
+socialrest.com^$third-party - reject
+socialtools.fm^$third-party - reject
+softwebzone.com^$third-party - reject
+spiceworks.com/share/$third-party - reject
+spotify.com/follow/$third-party - reject
+static*.linkedin.com/scds/common/$image,third-party - reject
+statigr.am/widget.php$third-party - reject
+statigr.am^*/follow/$third-party - reject
+stipple.cachefly.net^$third-party - reject
+stipple.com^$third-party - reject
+store.yahoo.net^*/facebook.png$third-party - reject
+store.yahoo.net^*/twitter.png$third-party - reject
+storeya.com/externalscript/$third-party - reject
+stumble-upon.com^$third-party,domain=~stumbleupon.com - reject
+stumbleupon.com/badge/$third-party - reject
+stumbleupon.com/hostedbadge$third-party - reject
+stumbleupon.com/services/$third-party - reject
+syndication.twimg.com/widgets/$third-party - reject
+trendemon.com^$third-party - reject
+tru.am^$third-party - reject
+tweetboard.com^$third-party - reject
+tweetgrid.com^$third-party - reject
+tweetmeme.com^$third-party - reject
+tweetriver.com^$third-party - reject
+twinesocial.com^$third-party - reject
+twitbuttons.com^$third-party - reject
+twitcker.com^$third-party - reject
+twitcount.com^$third-party - reject
+twitstat.us^$third-party - reject
+twitter-badges.s3.amazonaws.com^ - reject
+twitter.com/*statuses/user_timeline/$third-party - reject
+twitter.com/account/$third-party - reject
+twitter.com/i/jot - reject
+twitter.com/javascripts/$third-party - reject
+twitter.com/js/timeline.$script,third-party - reject
+twittercounter.com^$third-party - reject
+twitterforweb.com^$third-party - reject
+twittericon.com^$third-party - reject
+twittermysite.com^$third-party - reject
+twitthis.com^$third-party - reject
+usocial.pro^$third-party - reject
+vk.com/share.php?$third-party - reject
+vk.com/widget_community.php$third-party - reject
+vk.com/widget_community_messages.php?$third-party - reject
+vk.com/widget_like.php$third-party - reject
+vkontakte.ru/js/api/$third-party,domain=~arudex.com|~ugo.ru|~vk.com - reject
+vkontakte.ru/share.php?$third-party - reject
+vkontakte.ru/widget_community.php$third-party - reject
+vkontakte.ru/widget_like.php$third-party - reject
+vuukle.com/widgets/emotes.html$third-party - reject
+vuukle.com/widgets/powerbar.html$third-party - reject
+vuukle.com/widgets/powerbar/$third-party - reject
+w.uptolike.com^$third-party - reject
+weheartit.com^$third-party - reject
+weibo.com/staticjs/weiboshare.html$third-party - reject
+wer-kennt-wen.de/js/widgets/external/$third-party - reject
+werkenntwen.de/images/empfehlen_buttons/$third-party - reject
+whatsapp-sharing.com^$third-party - reject
+whatsbroadcast.com^$third-party - reject
+widget.stagram.com^$third-party - reject
+widget.weibo.com^$third-party - reject
+widget.whatshelp.io^$third-party - reject
+widgets.fbshare.me^$third-party - reject
+widgets.getpocket.com^$third-party - reject
+widgets.itaringa.net^$third-party - reject
+widgets.wp.com/likes/$third-party - reject
+wykop.pl/dataprovider/diggerwidget/$third-party - reject
+xing-share.com^$third-party - reject
+xing.com/img/buttons/$third-party - reject
+yandex.st/share/ - reject
+youtube.com/subscribe_embed?$third-party - reject
+youtube.com/subscribe_widget$third-party - reject
+ywidgets.awe.sm^$third-party - reject
+zextit.com/partners/$third-party - reject
 ^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads - reject
 ^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) - reject
 ^https?:\/\/\s.youtube.com/api/stats/qoe?.*adformat= - reject
