fix extension rules

--- a/shadowIR.conf
+++ b/shadowIR.conf
@@ -16,22 +16,22 @@ ipv6 = false
 
 [Rule]
 # Proxy Rules plist
-RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/base.plist,PROXY
-RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/telegram.plist,PROXY
-RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/telegramv6.plist,PROXY,no-resolve
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/base.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/telegram.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/telegramv6.list,PROXY,no-resolve
 
 # Direct Rules plist
-RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/direct/base.plist,DIRECT
-RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/direct/apple.plist,DIRECT
-RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/direct/iran.plist,DIRECT
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/direct/base.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/direct/apple.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/direct/iran.list,DIRECT
 
 # Reject Rules plist
-RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/iran.plist,REJECT
-RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/adguards.plist,REJECT
-RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/apple.plist,REJECT
-RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/youtube.plist,REJECT
-RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/spotify.plist,REJECT
-RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/error-monitor.plist,REJECT
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/iran.list,REJECT
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/adguards.list,REJECT
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/apple.list,REJECT
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/youtube.list,REJECT
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/spotify.list,REJECT
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/error-monitor.list,REJECT
 
 GEOIP,IR,DIRECT
 FINAL,PROXY
