enbaled ipv6 support

--- a/shadowIR.conf
+++ b/shadowIR.conf
@@ -11,7 +11,7 @@ tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 17
 # CloudFlare and Google dns
 dns-server = 1.1.1.1,8.8.8.8
 
-ipv6 = false
+ipv6 = true
 
 
 [Rule]
