add: whatsapp cidr ip to proxy rules

--- a/shadowIR.conf
+++ b/shadowIR.conf
@@ -21,6 +21,7 @@ update-url = https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/shadowIR.
 # Proxy Rules plist
 RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/base.list,PROXY
 RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/telegram.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/whatsapp.list,PROXY
 
 # Direct Rules plist
 RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/direct/base.list,DIRECT
